--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.3.2",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "request": "^2.88.0"
   },
   "repository": "github:Mikkhael/pajacbot"
 }
